# record

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/dev/adeptproductions/recorder/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  CMakeLists.txt  SuperpoweredRecorder.cpp  native-lib.cpp
app/src/main/java/com/example/record/: MainActivity.kt
app/src/main/java/com/example/record/audio/: AudioEngine.kt  AudioInputManager.kt  LoopBuffer.kt
app/src/main/java/com/example/record/controller/: LoopController.kt  LoopState.kt
app/src/main/java/com/example/record/ui/: MainScreen.kt
app/src/main/java/com/example/record/ui/controls/: DeviceSelector.kt  LevelMeter.kt  LooperButton.kt
app/src/main/java/com/example/record/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/dev/adeptproductions/recorder/: MainActivity.kt
app/src/main/java/dev/adeptproductions/recorder/audio/: AudioPlayer.kt  AudioRecorder.kt  NativeBridge.kt
app/src/main/java/dev/adeptproductions/recorder/ui/: PermissionUtils.kt
app/src/main/java/dev/adeptproductions/recorder/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/mipmap/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/dev/adeptproductions/recorder/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
